objects/BillingCase__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Tax_Status__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acruing Tax</fullName>
                </value>
                <value>
                    <fullName>Not Acruing Tax</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_rep_1__c</fullName>
        <label>Sales rep 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Closed_By__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Jack Ukil</fullName>
                </value>
                <value>
                    <fullName>Peter Kaandorp</fullName>
                </value>
                <value>
                    <fullName>Mike Julka</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Graham Beale</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Kevin Caiazza</fullName>
                </value>
                <value>
                    <fullName>Kim Murdock</fullName>
                </value>
                <value>
                    <fullName>Jonathan Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Lizz Harrell</fullName>
                </value>
                <value>
                    <fullName>Gurpreet Singh</fullName>
                </value>
                <value>
                    <fullName>Daniel Stone</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Jenna Glotz</fullName>
                </value>
                <value>
                    <fullName>Emma Batson</fullName>
                </value>
                <value>
                    <fullName>Katie LaDue</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Janine Alsalam</fullName>
                </value>
                <value>
                    <fullName>Mollie Propes</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Meg Stensrud</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Ryan McGlynn</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Rachel Ruddock</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Garrett Bredenkamp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_To_Legal__c</fullName>
        <label>Recommend Sending To Legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Settlement_Payment_Amount__c</fullName>
        <label>Settlement/Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skip_Details__c</fullName>
        <label>Skip Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skip_Done__c</fullName>
        <label>Skip Done</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substantial_Amount__c</fullName>
        <label>Substantial Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Next_Steps__c</fullName>
        <label>Suggested Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Client_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TM Client ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TM_Venue_ID__c</fullName>
        <formula>CustomersAccount__r.TM_Venue_ID__c</formula>
        <label>TM Venue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToU_Accepted_Date__c</fullName>
        <label>ToU Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Cancelled__c</fullName>
        <formula>Cancellation_61_90__c  +  Cancellation_0_30__c  +  Cancellation_31_60__c  +  Cancellation_91__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <formula>Amount_91__c  +  X0_30__c  +  Amount_Due_31_60__c  +  Amount_Due_61_90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Plan_Amount__c</fullName>
        <formula>Payment_Plan_0_30__c  +  Payment_Plan_31_60__c  +  Payment_Plan_61_90__c  +  Payment_Plan_91__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_in_Aging_Value_del__c</fullName>
        <formula>X30_60_Value_del__c  +  X60_90_Value_del__c  +  X91_Value_del__c  +  A0_30_Value_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total in Aging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tried_SKIP__c</fullName>
        <label>Tried SKIP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSN - P</fullName>
                </value>
                <value>
                    <fullName>CSN - S</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event + CSN - P</fullName>
                </value>
                <value>
                    <fullName>Event + Survey</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Survey + CSN - S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unresolved_del__c</fullName>
        <formula>( Bucket_value_1_del__c ) -  (Write_off_done_Value_del__c  +  Payment_Received_del__c+ ST_W_OFF_Done__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unresolved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_W_OFF_to_be_done_Value_del__c</fullName>
        <label>Write off to be done</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Write_off_done_Value_del__c</fullName>
        <label>Write off done</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Write_off_done_Week_del__c</fullName>
        <label>Write off done (Week)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week 1</fullName>
                </value>
                <value>
                    <fullName>Week 2</fullName>
                </value>
                <value>
                    <fullName>Week 3</fullName>
                </value>
                <value>
                    <fullName>Week 4</fullName>
                </value>
                <value>
                    <fullName>Week 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X0_30__c</fullName>
        <label>Amount Due 0-30</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Escalation_Point__c</fullName>
        <label>1st Escalation Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_60_Value_del__c</fullName>
        <label>30 - 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X60_90_Value_del__c</fullName>
        <label>60 -90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X91_Value_del__c</fullName>
        <label>91+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Value__c</fullName>
        <label>Year 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Value__c</fullName>
        <label>Year 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Value__c</fullName>
        <label>Year 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Installments_Due__c</fullName>
        <label># of Installments Due</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Case</label>
    <nameField>
        <label>Billing Cases</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Cases</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Non_TM</fullName>
        <active>true</active>
        <label>Non TM</label>
    </recordTypes>
    <recordTypes>
        <fullName>TM_Billing_Cases</fullName>
        <active>true</active>
        <label>TM Billing Cases</label>
    </recordTypes>
    <validationRules>
        <fullName>CVII_ID</fullName>
        <active>true</active>
        <description>a rep can not have an option of choosing (coma) while updating multiple CVII Id’s in CVII ID section</description>
        <errorConditionFormula>AND(
CONTAINS(CVII_Number__c, ','),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))
)</errorConditionFormula>
        <errorDisplayField>CVII_Number__c</errorDisplayField>
        <errorMessage>Please use Semi-colon (;) instead of comma (,)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Tax_Info_Section_Edit</fullName>
        <active>true</active>
        <description>Only few people should be able to edit this seciton</description>
        <errorConditionFormula>AND(

OR(ISCHANGED( Inquired__c ),ISCHANGED( Confirmation__c ),ISCHANGED( Response_Received__c ),ISCHANGED( Comments__c ),ISCHANGED( Sales_Tax_Status__c )),

NOT(OR( $User.Id ='00500000007C9cP',$User.Id ='00500000006sCYO',$User.Id ='00500000007CDy0',$User.Id ='00500000007CeZb'))
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit Sales Tax Info</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Tax_Status_other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Text(Sales_Tax_Status__c) ="Other", Comments__c ="")</errorConditionFormula>
        <errorDisplayField>Sales_Tax_Status__c</errorDisplayField>
        <errorMessage>Comments can't be Blank when you select Other</errorMessage>
    </validationRules>
</CustomObject>